--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,25 @@
   transform: translate(-50%, -50%);
 }
 
+.event-label-container {
+  position: absolute;
+  z-index: 5;
+  top: 10%;
+  left: 13%;
+  width: 600px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.event-label-container label {
+  font-size: 30px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+}
+
 .button-container {
   position: relative;
   top: 75%;
@@ -24,6 +43,61 @@
 }
 .button-container button {
   width: 100px;
+}
+
+.piles-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  gap: 53px;
+  z-index: 4;
+  transform: translate(-50%, -50%);
+}
+
+.card-pile,
+.flipped-pile {
+  position: relative;
+  width: 90px;
+  height: 135px;
+  z-index: 5;
+}
+.card-pile img,
+.flipped-pile img {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.cards-number-container {
+  position: absolute;
+  top: 35%;
+  left: 56%;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  z-index: 4;
+  justify-content: center;
+  align-items: center;
+}
+.cards-number-counter {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.cards-number-counter img {
+  width: 100%;
+  height: 100%;
+}
+.cards-number-counter label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -38%);
+  font-size: 22px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
 }
 
 /* Image container for players */
