--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@
   text-align: center;
 }
 
-/* Image container for players */
 .image-container {
   position: relative;
   display: inline-block;
@@ -108,7 +107,6 @@
   height: 120px;
 }
 
-/* Ensuring images fill their containers */
 .image-container img {
   width: 100%;
   height: 100%;
@@ -117,7 +115,6 @@
   left: 0;
 }
 
-/* Background and overlay setup */
 .background {
   width: 100%;
   height: 83%;
@@ -132,7 +129,6 @@
   z-index: 5;
 }
 
-/* Position players around the board */
 .player-container {
   position: absolute;
 }
@@ -150,7 +146,6 @@
   position: relative;
 }
 
-/* Adjust each player's card separately */
 #player0_displayCard { top: -275%; left: 11%; transform: rotate(0deg); }
 #player1_displayCard { top: -70%; left: -210%; transform: rotate(-53deg); }
 #player2_displayCard { top: 50%; left: -210%; transform: rotate(53deg); }
@@ -190,9 +185,21 @@
   border: 3px solid yellow; /* Highlight with a yellow border */
 }
 
-/* Equidistant placement around the central board */
 .player0 { top: 102%; left: 50%; transform: translate(-50%, 0); }
-.player1 { top: 80%; left: 105%; transform: translate(-50%, -50%); }
-.player2 { top: 15%; left: 105%; transform: translate(-50%, -50%); }
-.player3 { top: 15%; left: -5%; transform: translate(-50%, -50%); }
-.player4 { top: 80%; left: -5%; transform: translate(-50%, -50%); }
+.player1 { top: 85%; left: 106%; transform: translate(-50%, -50%); }
+.player2 { top: 25%; left: 106%; transform: translate(-50%, -50%); }
+.player3 { top: 25%; left: -6%; transform: translate(-50%, -50%); }
+.player4 { top: 85%; left: -6%; transform: translate(-50%, -50%); }
+
+.lasso-display {
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  left: 15%;
+  height: 120px;
+  width: 80px;
+}
+.lasso-display img {
+  width: 100%;
+  height: 100%;
+}
